--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <tit> Tina Portfolio</title>
+    <title> Tina Portfolio</title>
 </head>
 <body>
+<header>
+  Tina Portfolio
+<div class="grad"
+</header>
       <h1>
       <strong> Cooking in the kitchen </strong>
     </h1>
