--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
     <hr />
     <br />
     <p>
-      Chicken is a popular protein choice, owing to its ease of preparation and
-      lean profile. Chicken has a reputation for being bland, yet this could not
-      be further from the truth. Whether you favour juicy chicken thighs or soft
-      chicken breasts, there are numerous simple ways to spice up the meat and
-      make it a winning lunch or dinner. We recommend starting with the Tuscan
-      Chicken Skillet. It's loaded with bacon, cream, and Parmesan—is your mouth
-      watering yet? There's no reason to eat out when you can prepare this
-      restaurant-style creamy, cheesy chicken with fettuccine at home.
+      Hello  I'm [Your Name], a young front-end developer who is passionate about clear code, user-friendly design, and addressing practical problems.
+
+ I just finished the SheCodes Basics and Plus workshops, where I used HTML, CSS, JavaScript, and API integrations to create a number of interactive projects.  My sense of user-friendly design has improved as a result of these experiences, and I now know how to combine creativity with functionality on the web.
+
+ With a solid background in front-end technologies and a developing passion for technology, I'm now hoping to be a part of a team that values both creativity and learning.  This portfolio provides an overview of my previous work and a sneak peek at the enthusiasm, interest, and dedication I put into each project.
     </p>
     <div>
       <a
