--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css" />
     <title> Tina Portfolio</title>
 </head>
 <body>
@@ -11,26 +12,12 @@
   Tina Portfolio
   </h1>
 
-   
-  <h2>
-       Hello  I'm Tina Siyengo, a young front-end developer who is passionate about clear code, user-friendly design, and addressing practical problems.
-I just finished the SheCodes Basics and Plus workshops, where I used HTML, CSS, JavaScript, and API integrations to create a number of interactive projects.  My sense of user-friendly design has improved as a result of these experiences, and I now know how to combine creativity with functionality on the web.
-With a solid background in front-end technologies and a developing passion for technology, I'm now hoping to be a part of a team that values both creativity and learning.  This portfolio provides an overview of my previous work and a sneak peek at the enthusiasm, interest, and dedication I put into each project.
- </h2> 
 </header> 
-      <span> Chicken is <img
-      src="https://i.pinimg.com/236x/d8/d4/4e/d8d44ef23fd4cdeaf38c1c92b479d5ba.jpg"
-      alt=""
-    />
+     
     <hr />
     <br />
     <p>
-      Hello  I'm [Your Name], a young front-end developer who is passionate about clear code, user-friendly design, and addressing practical problems.
-
- I just finished the SheCodes Basics and Plus workshops, where I used HTML, CSS, JavaScript, and API integrations to create a number of interactive projects.  My sense of user-friendly design has improved as a result of these experiences, and I now know how to combine creativity with functionality on the web.
-
- With a solid background in front-end technologies and a developing passion for technology, I'm now hoping to be a part of a team that values both creativity and learning.  This portfolio provides an overview of my previous work and a sneak peek at the enthusiasm, interest, and dedication I put into each project.
-    </p>
+      Hello I'm Tina Siyengo, a young front-end developer who is passionate about clear code, user-friendly design, and addressing practical problems. I just finished the SheCodes Basics and Plus workshops, where I used HTML, CSS, JavaScript, and API integrations to create a number of interactive projects. My sense of user-friendly design has improved as a result of these experiences, and I now know how to combine creativity with functionality on the web. With a solid background in front-end technologies and a developing passion for technology, I'm now hoping to be a part of a team that values both creativity and learning. This portfolio provides an overview of my previous work and a sneak peek at the enthusiasm, interest, and dedication I put into each project.
     <div>
       <a
         href="https://www.foodnetwork.com/recipes/photos/easy-chicken-dinner-recipes"
